[tool.poetry]
name = "locust_test"
version = "0.1.0"
description = "Performance tests"
authors = ["Creiton Monteiro <creiton.ragnel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
locust = "2.1.0"
pika = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
darker = "^1.3.0"
ipdb = "^0.13.9"

[tool.darker]
src = ["scripts/"]
diff = true
check = true
isort = true
lint = ["flake8"]
log_level = "INFO"
